--- a/bejeweledDJTS/empty-example/index.html
+++ b/bejeweledDJTS/empty-example/index.html
@@ -9,19 +9,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<<<<<<< HEAD
-    <div class="script">
-        <script src="sketch.js"></script>
-    </div>
+
     <input type="submit" id="start-clock" value="Start game" name="submit" onClick="startClock()"/>
     <main>
-        <div>Time left: <span id="timer">05:00</span></div>
+        <script src="sketch.js"></script>
+        <div><span id="timer">Time left: 05:00</span></div>
         <div>Score: <span id="score">0</span></div>
     </main>
-=======
-    <script src="sketch.js"></script>
 
-
->>>>>>> 569a8bdccc3265cf92ae0710434b3354ba2cf30d
 </body>
 </html>
