--- a/bejeweledDJTS/empty-example/index.html
+++ b/bejeweledDJTS/empty-example/index.html
@@ -14,7 +14,11 @@
     <main>
         <script src="sketch.js"></script>
         <div><span id="timer">Time left: 05:00</span></div>
-        <div>Score: <span id="score">0</span></div>
+        <div>
+            Score: <span id="score"></span>Highscore: <span id="highscore"></span>
+        </div>
+        <div id="canvas">
+        </div>
     </main>
 
 </body>
