--- a/bejeweledDJTS/empty-example/index.html
+++ b/bejeweledDJTS/empty-example/index.html
@@ -12,7 +12,7 @@
 
     <div id="inputs">
         <input type="submit" id="start-clock" value="Start game" name="submit" onClick="startClock()"/>
-        <input type="submit" id="start-clock" value="Restart game" name="submit" onClick="restartGame()"/>
+        <input type="submit" id="start-clock" value="Stop game" name="submit" onClick="stopGame()"/>
     </div>
 
     <main>
